# asquaremeter-cms

./: .gitignore  backfill_weather.py  build.py  config.json  deploy.py  how_to_use_the_project.md  idea.md  pipeline.py  pyproject.toml  regenerate_thumbs.py  taxonomy.py
data/: observations.json  sightings.json  taxonomy_cache.json
posts/: 01012026.md
static/: CNAME
static/css/: style.css
templates/: about.html  base.html  browse.html  index.html  post.html  posts_index.html  sighting.html  stats.html  tree.html
tests/: test_api_integration.py  test_build.py  test_pipeline.py  test_taxonomy.py
